0.7.2
=====
-Added a config header for client.
-Added a background color for client-side config
-Added Russian translation. Credit goes to alinahvoshch.
-File organization
-Fixed description typo, and added missing features to the description. Also removed comment about Radiance mod compat, since it had no point in existing.

-Infected cave walls now get highlighted by biome sight potions and spread infections. However they won't convert other cave walls.
-Added a config option to disable biome sight potion highlighting walls.
-Added mod compat with 'Terraria Origins' and 'AltLibrary'.
-Chlorophyte infection preventation now goes back to normal if 'InfectedBiomes' config is turned off.
-Added an experimental config option to bring back demon altars spawning in infected blocks.
-Added infected variants of moss blocks, and a config option to disable it.
-Hallow theme now plays in the Hallowed jungle, can be disabled in the config.
-Disabled infected grass spread pre-hardmode.

0.7.1
=====
-Initial Release